error.log
    Checking rust_rmbg v0.1.0 (D:\ASUNA\Tools\Visual_studio\rust_rmbg)
error[E0502]: cannot borrow `*session` as mutable because it is also borrowed as immutable
   --> src\main.rs:399:19
    |
396 |     let input_name = session.inputs()[0].name();
    |                      ------- immutable borrow occurs here
...
399 |     let outputs = session.run(ort::inputs![input_name => input_value]).map_err(|e| {
    |                   ^^^^^^^^---^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                   |       |
    |                   |       immutable borrow later used by call
    |                   mutable borrow occurs here

For more information about this error, try `rustc --explain E0502`.
error: could not compile `rust_rmbg` (bin "rust_rmbg") due to 1 previous error
